--- a/index.html
+++ b/index.html
@@ -1,351 +1,283 @@
-<  <!DOCTYPE html>
+  <!DOCTYPE html>
   <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Flappy Bird + Encryptor</title>
+    <title>Flappy Game</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f0f0f0;
-        text-align: center;
-      }
-
-      #gameCanvas {
-        background: skyblue;
-        display: block;
-        margin: 0 auto;
-      }
-
-      #score {
-        font-size: 20px;
-        margin-top: 10px;
-        cursor: pointer;
-      }
-
-      #encryptorSection {
-        display: none;
-        padding: 20px;
-      }
-
-      textarea {
-        width: 90%;
-        height: 120px;
-        font-size: 16px;
-        padding: 10px;
-        margin-bottom: 10px;
-      }
-
-      input, button {
-        padding: 10px;
-        font-size: 16px;
-        margin: 5px;
-      }
-
-      .output {
-        background: #fff;
-        padding: 10px;
-        font-family: monospace;
-        white-space: pre-wrap;
-        border: 1px solid #ccc;
-        margin-top: 10px;
-        word-break: break-word;
-      }
-
-      button {
-        cursor: pointer;
-      }
+      body { font-family: Arial; margin: 0; padding: 0; background: #f0f0f0; text-align: center; }
+      #a { background: skyblue; display: block; margin: 0 auto; }
+      #b { font-size: 20px; margin-top: 10px; cursor: pointer; }
+      #c { display: none; padding: 20px; }
+      textarea { width: 90%; height: 120px; font-size: 16px; padding: 10px; margin-bottom: 10px; }
+      button { padding: 10px; font-size: 16px; margin: 5px; cursor: pointer; }
+      .d { background: #fff; padding: 10px; font-family: monospace; white-space: pre-wrap; border: 1px solid #ccc; margin-top: 10px; word-break: break-word; }
     </style>
   </head>
   <body>
-
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
-    <div id="score">Score: 0</div>
-
-    <div id="encryptorSection">
-      <h2>🔐 Offline Password-Based Encryptor</h2>
-      <label for="password">Password:</label><br />
-      <input type="password" id="password" placeholder="Enter password" />
-
-      <br /><br />
-      <label for="text">Message:</label><br />
-      <textarea id="text"></textarea>
-
-      <br />
-      <button onclick="encrypt()">Encrypt</button>
-      <button onclick="decrypt()">Decrypt</button>
-      <button onclick="copyToClipboard()">📋 Copy to Clipboard</button>
-
+    <canvas id="a" width="400" height="600"></canvas>
+    <div id="b">Score: 0</div>
+    <div id="c">
+      <h2>🔐 Encryptor</h2>
+      <label>Message:</label><br />
+      <textarea id="e"></textarea><br />
+      <button onclick="z()">Encrypt</button>
+      <button onclick="y()">Decrypt</button>
+      <button onclick="x()">📋 Copy</button>
       <h3>Output:</h3>
-      <div class="output" id="outputBox"></div>
-
-      <br>
-      <button onclick="goBackToGame()">⬅️ Back to Game</button>
+      <div class="d" id="f"></div><br>
+      <button onclick="w()">⬅️ Back</button>
     </div>
-
-    <script>
-      // FLAPPY BIRD SECTION
-      (() => {
-        const canvas = document.getElementById("gameCanvas");
-        const ctx = canvas.getContext("2d");
-
-        function adjustCanvasDPI() {
-          const dpr = window.devicePixelRatio || 1;
-          canvas.width = 400 * dpr;
-          canvas.height = 600 * dpr;
-          canvas.style.width = "400px";
-          canvas.style.height = "600px";
-          ctx.scale(dpr, dpr);
-        }
-        adjustCanvasDPI();
-
-        const bird = {
-          x: 50,
-          y: 150,
-          radius: 12,
-          gravity: 0.6,
-          lift: -10,
-          velocity: 0,
-          maxVelocity: 12,
-        };
-
-        const pipeWidth = 60;
-        const pipeGap = 150;
-        let pipes = [];
-        let frameCount = 0;
-        let score = 0;
-        let gameOver = false;
-
-        const scoreEl = document.getElementById("score");
-
-        function resetGame() {
-          bird.y = 150;
-          bird.velocity = 0;
-          pipes = [];
-          frameCount = 0;
-          score = 0;
-          gameOver = false;
-          scoreEl.textContent = "Score: 0";
-        }
-
-        function drawBird() {
-          ctx.fillStyle = "yellow";
-          ctx.beginPath();
-          ctx.arc(bird.x, bird.y, bird.radius, 0, Math.PI * 2);
-          ctx.fill();
-
-          ctx.fillStyle = "orange";
-          ctx.beginPath();
-          ctx.moveTo(bird.x + bird.radius + 5, bird.y);
-          ctx.lineTo(bird.x + bird.radius - 5, bird.y - 5);
-          ctx.lineTo(bird.x + bird.radius - 5, bird.y + 5);
-          ctx.closePath();
-          ctx.fill();
-
-          ctx.fillStyle = "black";
-          ctx.beginPath();
-          ctx.arc(bird.x + 5, bird.y - 5, 3, 0, Math.PI * 2);
-          ctx.fill();
-        }
-
-        function drawPipe(pipe) {
-          ctx.fillStyle = "#228B22";
-          ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
-          ctx.fillRect(pipe.x, pipe.top + pipeGap, pipeWidth, canvas.height / (window.devicePixelRatio || 1) - pipe.top - pipeGap);
-        }
-
-        function update() {
-          if (gameOver) return;
-
-          frameCount++;
-          bird.velocity += bird.gravity;
-          if (bird.velocity > bird.maxVelocity) bird.velocity = bird.maxVelocity;
-          bird.y += bird.velocity;
-
-          if (bird.y + bird.radius > canvas.height / (window.devicePixelRatio || 1)) {
-            bird.y = canvas.height / (window.devicePixelRatio || 1) - bird.radius;
-            gameOver = true;
+  
+  <script>
+  (async function(){
+    async function m(s){
+      const e=new TextEncoder();
+      const d=e.encode(s);
+      const b=await crypto.subtle.digest("SHA-256",d);
+      return Array.from(new Uint8Array(b)).map(c=>c.toString(16).padStart(2,"0")).join("");
+    }
+  
+    const n="a8eacfe7926e3e3b23e0e28a062c2797cb67ea1c1a9051c024f3c1f1291775b2";
+  
+    async function o(p){
+      if(!p) return false;
+      const h = await m(p);
+      return h === n;
+    }
+  
+    const r = {
+      max:5,
+      time:60000,
+      t:[],
+      can(){
+        const now=Date.now();
+        this.t = this.t.filter(a => now - a < this.time);
+        if(this.t.length >= this.max) return false;
+        this.t.push(now);
+        return true;
+      },
+      left(){
+        if(this.t.length === 0) return 0;
+        return Math.max(0, this.time - (Date.now() - this.t[0]));
+      }
+    };
+  
+    function u(s){ return s + "=".repeat((4 - s.length % 4) % 4); }
+    async function v(b){ return btoa(String.fromCharCode(...new Uint8Array(b))); }
+    async function g(b64){
+      try {
+        const p = u(b64);
+        const b = atob(p);
+        const a = new Uint8Array(b.length);
+        for(let i=0; i<b.length; i++) a[i] = b.charCodeAt(i);
+        return a.buffer;
+      } catch {
+        throw new Error("Invalid base64");
+      }
+    }
+  
+    async function j(p,s){
+      const e = new TextEncoder();
+      const k = await crypto.subtle.importKey("raw", e.encode(p), {name:"PBKDF2"}, false, ["deriveKey"]);
+      return crypto.subtle.deriveKey(
+        {name:"PBKDF2", salt:s, iterations:100000, hash:"SHA-256"},
+        k,
+        {name:"AES-GCM", length:256},
+        true,
+        ["encrypt","decrypt"]
+      );
+    }
+  
+    window.z = async function(){
+      if(!r.can()){
+        alert("Wait " + Math.ceil(r.left()/1000) + " seconds before trying again.");
+        return;
+      }
+      const pw = prompt("Password:");
+      if(!pw){ alert("Password required."); return; }
+      if(!await o(pw)){ alert("Wrong password."); return; }
+      const t = document.getElementById("e").value;
+      if(!t){ alert("Enter text to encrypt."); return; }
+      try {
+        const s = crypto.getRandomValues(new Uint8Array(16));
+        const i = crypto.getRandomValues(new Uint8Array(12));
+        const k = await j(pw, s);
+        const d = new TextEncoder().encode(t);
+        const enc = await crypto.subtle.encrypt({name:"AES-GCM", iv:i}, k, d);
+        const out = `SALT:${await v(s)}|IV:${await v(i)}|DATA:${await v(enc)}`;
+        document.getElementById("f").innerText = out;
+      } catch(e) {
+        document.getElementById("f").innerText = "❌ Encryption error: " + e.message;
+      }
+    };
+  
+    window.y = async function(){
+      if(!r.can()){
+        alert("Wait " + Math.ceil(r.left()/1000) + " seconds before trying again.");
+        return;
+      }
+      const pw = prompt("Password:");
+      if(!pw){ alert("Password required."); return; }
+      if(!await o(pw)){ alert("Wrong password."); return; }
+      const t = document.getElementById("e").value.trim();
+      if(!t){ alert("Enter text to decrypt."); return; }
+      try {
+        const p = t.split('|');
+        if(p.length !== 3) throw new Error("Wrong format.");
+        const [s1, s2, s3] = p.map(s => s.split(':')[1]);
+        const s = new Uint8Array(await g(s1));
+        const i = new Uint8Array(await g(s2));
+        const d = await g(s3);
+        const k = await j(pw, s);
+        const dec = await crypto.subtle.decrypt({name:"AES-GCM", iv:i}, k, d);
+        const txt = new TextDecoder().decode(dec);
+        document.getElementById("f").innerText = txt;
+      } catch(e) {
+        document.getElementById("f").innerText = "❌ Decryption error: " + e.message;
+      }
+    };
+  
+    window.x = function(){
+      const t = document.getElementById("f").innerText;
+      if(!t){ alert("Nothing to copy."); return; }
+      navigator.clipboard.writeText(t).then(() => alert("Copied!")).catch(() => alert("Copy failed."));
+    };
+  
+    window.w = function(){
+      document.getElementById("c").style.display = "none";
+      document.getElementById("a").style.display = "block";
+      document.getElementById("b").style.display = "block";
+    };
+  
+    window.q = function(){
+      document.getElementById("c").style.display = "block";
+      document.getElementById("a").style.display = "none";
+      document.getElementById("b").style.display = "none";
+    };
+  
+    const A = document.getElementById("a"), B = A.getContext("2d");
+    const C = {x:50, y:150, r:12, g:0.6, l:-10, v:0, mv:12};
+    const D = 60, E = 150;
+    const F = [];
+    const G = document.getElementById("b");
+    let H = 0, I = 0, J = false;
+  
+    function K(){
+      C.y = 150;
+      C.v = 0;
+      F.length = 0;
+      H = 0;
+      I = 0;
+      J = false;
+      G.textContent = "Score: 0";
+    }
+  
+    function L(){
+      B.fillStyle = "yellow";
+      B.beginPath();
+      B.arc(C.x, C.y, C.r, 0, 2*Math.PI);
+      B.fill();
+  
+      B.fillStyle = "black";
+      B.beginPath();
+      B.arc(C.x + 5, C.y - 4, 3, 0, 2*Math.PI);
+      B.fill();
+  
+      B.fillStyle = "orange";
+      B.beginPath();
+      let b = C.x + C.r + 10;
+      B.moveTo(b, C.y);
+      B.lineTo(b - 10, C.y - 3);
+      B.lineTo(b - 10, C.y + 3);
+      B.closePath();
+      B.fill();
+    }
+  
+    function M(p){
+      B.fillStyle = "#228B22";
+      B.fillRect(p.x, 0, D, p.t);
+      B.fillRect(p.x, p.t + E, D, A.height - p.t - E);
+    }
+  
+    function N(){
+      if(J) return;
+      H++;
+      C.v += C.g;
+      if(C.v > C.mv) C.v = C.mv;
+      C.y += C.v;
+  
+      if(C.y + C.r > A.height){
+        C.y = A.height - C.r;
+        J = true;
+      }
+      if(C.y - C.r < 0){
+        C.y = C.r;
+        C.v = 0;
+      }
+  
+      if(H % 90 === 0){
+        let mh = A.height - E - 50;
+        let th = Math.floor(Math.random() * mh) + 25;
+        F.push({x: A.width, t: th, p: false});
+      }
+  
+      for(let i = 0; i < F.length; i++){
+        let p = F[i];
+        p.x -= 3;
+  
+        if(C.x + C.r > p.x && C.x - C.r < p.x + D){
+          if(C.y - C.r < p.t || C.y + C.r > p.t + E){
+            J = true;
           }
-          if (bird.y - bird.radius < 0) {
-            bird.y = bird.radius;
-            bird.velocity = 0;
-          }
-
-          if (frameCount % 90 === 0) {
-            const maxHeight = canvas.height / (window.devicePixelRatio || 1) - pipeGap - 50;
-            const topHeight = Math.floor(Math.random() * maxHeight) + 25;
-            pipes.push({ x: canvas.width / (window.devicePixelRatio || 1), top: topHeight, passed: false });
-          }
-
-          for (let i = 0; i < pipes.length; i++) {
-            const pipe = pipes[i];
-            pipe.x -= 3;
-
-            if (bird.x + bird.radius > pipe.x && bird.x - bird.radius < pipe.x + pipeWidth) {
-              if (bird.y - bird.radius < pipe.top || bird.y + bird.radius > pipe.top + pipeGap) {
-                gameOver = true;
-              }
-            }
-
-            if (!pipe.passed && pipe.x + pipeWidth < bird.x - bird.radius) {
-              pipe.passed = true;
-              score++;
-              scoreEl.textContent = "Score: " + score;
-            }
-          }
-
-          pipes = pipes.filter(pipe => pipe.x + pipeWidth > 0);
         }
-
-        function draw() {
-          ctx.clearRect(0, 0, canvas.width, canvas.height);
-          drawBird();
-          pipes.forEach(drawPipe);
-
-          if (gameOver) {
-            ctx.fillStyle = "rgba(0, 0, 0, 0.5)";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = "white";
-            ctx.font = "48px Arial";
-            ctx.textAlign = "center";
-            ctx.fillText("Game Over", canvas.width / 2 / (window.devicePixelRatio || 1), canvas.height / 2 / (window.devicePixelRatio || 1) - 20);
-            ctx.font = "24px Arial";
-            ctx.fillText("Tap to Restart", canvas.width / 2 / (window.devicePixelRatio || 1), canvas.height / 2 / (window.devicePixelRatio || 1) + 20);
-          }
-        }
-
-        function loop() {
-          update();
-          draw();
-          requestAnimationFrame(loop);
-        }
-
-        function flap() {
-          if (gameOver) {
-            resetGame();
-          } else {
-            bird.velocity = bird.lift;
-          }
-        }
-
-        canvas.addEventListener("click", flap);
-        canvas.addEventListener("touchstart", e => {
-          e.preventDefault();
-          flap();
-        }, { passive: false });
-
-        // Switch to Encryptor on Score Click (if game over)
-        scoreEl.addEventListener("click", () => {
-          if (gameOver) {
-            document.getElementById("gameCanvas").style.display = "none";
-            document.getElementById("score").style.display = "none";
-            document.getElementById("encryptorSection").style.display = "block";
-          }
-        });
-
-        resetGame();
-        loop();
-      })();
-
-      // ENCRYPTOR SECTION
-      const fixedPassword = "money!";
-
-      // Helper: convert Uint8Array to base64 string
-      function uint8ArrayToBase64(bytes) {
-        let binary = '';
-        for (let i = 0; i < bytes.byteLength; i++) {
-          binary += String.fromCharCode(bytes[i]);
-        }
-        return btoa(binary);
-      }
-
-      // Helper: convert base64 string to Uint8Array
-      function base64ToUint8Array(base64) {
-        const binary = atob(base64);
-        const bytes = new Uint8Array(binary.length);
-        for (let i = 0; i < binary.length; i++) {
-          bytes[i] = binary.charCodeAt(i);
-        }
-        return bytes;
-      }
-
-      // XOR encrypt/decrypt on Uint8Array data with password Uint8Array key
-      function xorEncryptDecryptBytes(dataBytes, keyBytes) {
-        const output = new Uint8Array(dataBytes.length);
-        for (let i = 0; i < dataBytes.length; i++) {
-          output[i] = dataBytes[i] ^ keyBytes[i % keyBytes.length];
-        }
-        return output;
-      }
-
-      function checkPassword(inputPassword) {
-        return inputPassword === fixedPassword;
-      }
-
-      function encrypt() {
-        const text = document.getElementById("text").value;
-        const password = document.getElementById("password").value;
-
-        if (!password || !checkPassword(password)) {
-          alert("Incorrect or missing password.");
-          return;
-        }
-        if (!text) {
-          alert("Please enter a message to encrypt.");
-          return;
-        }
-
-        const encoder = new TextEncoder();
-        const dataBytes = encoder.encode(text);
-        const keyBytes = encoder.encode(fixedPassword);
-
-        const encryptedBytes = xorEncryptDecryptBytes(dataBytes, keyBytes);
-        const encoded = uint8ArrayToBase64(encryptedBytes);
-
-        document.getElementById("outputBox").innerText = encoded;
-      }
-
-      function decrypt() {
-        const text = document.getElementById("text").value;
-        const password = document.getElementById("password").value;
-
-        if (!password || !checkPassword(password)) {
-          alert("Incorrect or missing password.");
-          return;
-        }
-        if (!text) {
-          alert("Please enter a message to decrypt.");
-          return;
-        }
-
-        try {
-          const encryptedBytes = base64ToUint8Array(text);
-          const encoder = new TextEncoder();
-          const keyBytes = encoder.encode(fixedPassword);
-
-          const decryptedBytes = xorEncryptDecryptBytes(encryptedBytes, keyBytes);
-          const decoder = new TextDecoder();
-          const decryptedText = decoder.decode(decryptedBytes);
-
-          document.getElementById("outputBox").innerText = decryptedText;
-        } catch (e) {
-          document.getElementById("outputBox").innerText = "❌ Decryption failed.";
+  
+        if(!p.p && p.x + D < C.x - C.r){
+          p.p = true;
+          I++;
+          G.textContent = "Score: " + I;
         }
       }
-
-      function copyToClipboard() {
-        const text = document.getElementById("outputBox").innerText;
-        navigator.clipboard.writeText(text)
-          .then(() => alert("Copied to clipboard!"))
-          .catch(err => alert("Failed to copy: " + err));
+  
+      while(F.length > 0 && F[0].x + D < 0){
+        F.shift();
       }
-
-      function goBackToGame() {
-        document.getElementById("encryptorSection").style.display = "none";
-        document.getElementById("gameCanvas").style.display = "block";
-        document.getElementById("score").style.display = "block";
+    }
+  
+    function O(){
+      B.clearRect(0, 0, A.width, A.height);
+      L();
+      F.forEach(M);
+      if(J){
+        B.fillStyle = "rgba(0,0,0,0.5)";
+        B.fillRect(0, 0, A.width, A.height);
+        B.fillStyle = "white";
+        B.font = "48px Arial";
+        B.textAlign = "center";
+        B.fillText("Game Over", A.width / 2, A.height / 2 - 20);
+        B.font = "24px Arial";
+        B.fillText("Tap to Restart", A.width / 2, A.height / 2 + 20);
       }
-    </script>
+    }
+  
+    function P(){
+      N();
+      O();
+      requestAnimationFrame(P);
+    }
+  
+    function Q(){
+      if(J) K();
+      else C.v = C.l;
+    }
+  
+    A.addEventListener("click", Q);
+    A.addEventListener("touchstart", e => { e.preventDefault(); Q(); }, {passive: false});
+    G.addEventListener("click", () => { window.q(); });
+  
+    K();
+    P();
+  
+  })();
+  </script>
   </body>
   </html>
