--- a/index.html
+++ b/index.html
@@ -1,283 +1,284 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Flappy Game</title>
-    <style>
-      body { font-family: Arial; margin: 0; padding: 0; background: #f0f0f0; text-align: center; }
-      #a { background: skyblue; display: block; margin: 0 auto; }
-      #b { font-size: 20px; margin-top: 10px; cursor: pointer; }
-      #c { display: none; padding: 20px; }
-      textarea { width: 90%; height: 120px; font-size: 16px; padding: 10px; margin-bottom: 10px; }
-      button { padding: 10px; font-size: 16px; margin: 5px; cursor: pointer; }
-      .d { background: #fff; padding: 10px; font-family: monospace; white-space: pre-wrap; border: 1px solid #ccc; margin-top: 10px; word-break: break-word; }
-    </style>
-  </head>
-  <body>
-    <canvas id="a" width="400" height="600"></canvas>
-    <div id="b">Score: 0</div>
-    <div id="c">
-      <h2>🔐 Encryptor</h2>
-      <label>Message:</label><br />
-      <textarea id="e"></textarea><br />
-      <button onclick="z()">Encrypt</button>
-      <button onclick="y()">Decrypt</button>
-      <button onclick="x()">📋 Copy</button>
-      <h3>Output:</h3>
-      <div class="d" id="f"></div><br>
-      <button onclick="w()">⬅️ Back</button>
-    </div>
-  
-  <script>
-  (async function(){
-    async function m(s){
-      const e=new TextEncoder();
-      const d=e.encode(s);
-      const b=await crypto.subtle.digest("SHA-256",d);
-      return Array.from(new Uint8Array(b)).map(c=>c.toString(16).padStart(2,"0")).join("");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Flappy Game</title>
+  <style>
+    body { font-family: Arial; margin: 0; padding: 0; background: #f0f0f0; text-align: center; }
+    #a { background: skyblue; display: block; margin: 0 auto; }
+    #b { font-size: 20px; margin-top: 10px; cursor: pointer; }
+    #c { display: none; padding: 20px; }
+    textarea { width: 90%; height: 120px; font-size: 16px; padding: 10px; margin-bottom: 10px; }
+    button { padding: 10px; font-size: 16px; margin: 5px; cursor: pointer; }
+    .d { background: #fff; padding: 10px; font-family: monospace; white-space: pre-wrap; border: 1px solid #ccc; margin-top: 10px; word-break: break-word; }
+  </style>
+</head>
+<body>
+<canvas id="a" width="400" height="600"></canvas>
+<div id="b">Score: 0</div>
+<div id="c">
+  <h2>🔐 Encryptor</h2>
+  <label>Message:</label><br />
+  <textarea id="e"></textarea><br />
+  <button onclick="z()">Encrypt</button>
+  <button onclick="y()">Decrypt</button>
+  <button onclick="x()">📋 Copy</button>
+  <h3>Output:</h3>
+  <div class="d" id="f"></div><br>
+  <button onclick="w()">⬅️ Back</button>
+</div>
+
+<script>
+(async function(){
+  async function m(s){
+    const e=new TextEncoder();
+    const d=e.encode(s);
+    const b=await crypto.subtle.digest("SHA-256",d);
+    return Array.from(new Uint8Array(b)).map(c=>c.toString(16).padStart(2,"0")).join("");
+  }
+
+  // New hash for password "K!ngJ@mes#1"
+  const n="ae67cfa019afb2b15ef0c9e578e0409668feb4bbde37201a59ac668fe7ce18ed";
+
+  async function o(p){
+    if(!p) return false;
+    const h = await m(p);
+    return h === n;
+  }
+
+  const r = {
+    max:5,
+    time:60000,
+    t:[],
+    can(){
+      const now=Date.now();
+      this.t = this.t.filter(a => now - a < this.time);
+      if(this.t.length >= this.max) return false;
+      this.t.push(now);
+      return true;
+    },
+    left(){
+      if(this.t.length === 0) return 0;
+      return Math.max(0, this.time - (Date.now() - this.t[0]));
     }
-  
-    const n="a8eacfe7926e3e3b23e0e28a062c2797cb67ea1c1a9051c024f3c1f1291775b2";
-  
-    async function o(p){
-      if(!p) return false;
-      const h = await m(p);
-      return h === n;
+  };
+
+  function u(s){ return s + "=".repeat((4 - s.length % 4) % 4); }
+  async function v(b){ return btoa(String.fromCharCode(...new Uint8Array(b))); }
+  async function g(b64){
+    try {
+      const p = u(b64);
+      const b = atob(p);
+      const a = new Uint8Array(b.length);
+      for(let i=0; i<b.length; i++) a[i] = b.charCodeAt(i);
+      return a.buffer;
+    } catch {
+      throw new Error("Invalid base64");
     }
-  
-    const r = {
-      max:5,
-      time:60000,
-      t:[],
-      can(){
-        const now=Date.now();
-        this.t = this.t.filter(a => now - a < this.time);
-        if(this.t.length >= this.max) return false;
-        this.t.push(now);
-        return true;
-      },
-      left(){
-        if(this.t.length === 0) return 0;
-        return Math.max(0, this.time - (Date.now() - this.t[0]));
-      }
-    };
-  
-    function u(s){ return s + "=".repeat((4 - s.length % 4) % 4); }
-    async function v(b){ return btoa(String.fromCharCode(...new Uint8Array(b))); }
-    async function g(b64){
-      try {
-        const p = u(b64);
-        const b = atob(p);
-        const a = new Uint8Array(b.length);
-        for(let i=0; i<b.length; i++) a[i] = b.charCodeAt(i);
-        return a.buffer;
-      } catch {
-        throw new Error("Invalid base64");
-      }
+  }
+
+  async function j(p,s){
+    const e = new TextEncoder();
+    const k = await crypto.subtle.importKey("raw", e.encode(p), {name:"PBKDF2"}, false, ["deriveKey"]);
+    return crypto.subtle.deriveKey(
+      {name:"PBKDF2", salt:s, iterations:100000, hash:"SHA-256"},
+      k,
+      {name:"AES-GCM", length:256},
+      true,
+      ["encrypt","decrypt"]
+    );
+  }
+
+  window.z = async function(){
+    if(!r.can()){
+      alert("Wait " + Math.ceil(r.left()/1000) + " seconds before trying again.");
+      return;
     }
-  
-    async function j(p,s){
-      const e = new TextEncoder();
-      const k = await crypto.subtle.importKey("raw", e.encode(p), {name:"PBKDF2"}, false, ["deriveKey"]);
-      return crypto.subtle.deriveKey(
-        {name:"PBKDF2", salt:s, iterations:100000, hash:"SHA-256"},
-        k,
-        {name:"AES-GCM", length:256},
-        true,
-        ["encrypt","decrypt"]
-      );
+    const pw = prompt("Password:");
+    if(!pw){ alert("Password required."); return; }
+    if(!await o(pw)){ alert("Wrong password."); return; }
+    const t = document.getElementById("e").value;
+    if(!t){ alert("Enter text to encrypt."); return; }
+    try {
+      const s = crypto.getRandomValues(new Uint8Array(16));
+      const i = crypto.getRandomValues(new Uint8Array(12));
+      const k = await j(pw, s);
+      const d = new TextEncoder().encode(t);
+      const enc = await crypto.subtle.encrypt({name:"AES-GCM", iv:i}, k, d);
+      const out = `SALT:${await v(s)}|IV:${await v(i)}|DATA:${await v(enc)}`;
+      document.getElementById("f").innerText = out;
+    } catch(e) {
+      document.getElementById("f").innerText = "❌ Encryption error: " + e.message;
     }
-  
-    window.z = async function(){
-      if(!r.can()){
-        alert("Wait " + Math.ceil(r.left()/1000) + " seconds before trying again.");
-        return;
-      }
-      const pw = prompt("Password:");
-      if(!pw){ alert("Password required."); return; }
-      if(!await o(pw)){ alert("Wrong password."); return; }
-      const t = document.getElementById("e").value;
-      if(!t){ alert("Enter text to encrypt."); return; }
-      try {
-        const s = crypto.getRandomValues(new Uint8Array(16));
-        const i = crypto.getRandomValues(new Uint8Array(12));
-        const k = await j(pw, s);
-        const d = new TextEncoder().encode(t);
-        const enc = await crypto.subtle.encrypt({name:"AES-GCM", iv:i}, k, d);
-        const out = `SALT:${await v(s)}|IV:${await v(i)}|DATA:${await v(enc)}`;
-        document.getElementById("f").innerText = out;
-      } catch(e) {
-        document.getElementById("f").innerText = "❌ Encryption error: " + e.message;
-      }
-    };
-  
-    window.y = async function(){
-      if(!r.can()){
-        alert("Wait " + Math.ceil(r.left()/1000) + " seconds before trying again.");
-        return;
-      }
-      const pw = prompt("Password:");
-      if(!pw){ alert("Password required."); return; }
-      if(!await o(pw)){ alert("Wrong password."); return; }
-      const t = document.getElementById("e").value.trim();
-      if(!t){ alert("Enter text to decrypt."); return; }
-      try {
-        const p = t.split('|');
-        if(p.length !== 3) throw new Error("Wrong format.");
-        const [s1, s2, s3] = p.map(s => s.split(':')[1]);
-        const s = new Uint8Array(await g(s1));
-        const i = new Uint8Array(await g(s2));
-        const d = await g(s3);
-        const k = await j(pw, s);
-        const dec = await crypto.subtle.decrypt({name:"AES-GCM", iv:i}, k, d);
-        const txt = new TextDecoder().decode(dec);
-        document.getElementById("f").innerText = txt;
-      } catch(e) {
-        document.getElementById("f").innerText = "❌ Decryption error: " + e.message;
-      }
-    };
-  
-    window.x = function(){
-      const t = document.getElementById("f").innerText;
-      if(!t){ alert("Nothing to copy."); return; }
-      navigator.clipboard.writeText(t).then(() => alert("Copied!")).catch(() => alert("Copy failed."));
-    };
-  
-    window.w = function(){
-      document.getElementById("c").style.display = "none";
-      document.getElementById("a").style.display = "block";
-      document.getElementById("b").style.display = "block";
-    };
-  
-    window.q = function(){
-      document.getElementById("c").style.display = "block";
-      document.getElementById("a").style.display = "none";
-      document.getElementById("b").style.display = "none";
-    };
-  
-    const A = document.getElementById("a"), B = A.getContext("2d");
-    const C = {x:50, y:150, r:12, g:0.6, l:-10, v:0, mv:12};
-    const D = 60, E = 150;
-    const F = [];
-    const G = document.getElementById("b");
-    let H = 0, I = 0, J = false;
-  
-    function K(){
-      C.y = 150;
+  };
+
+  window.y = async function(){
+    if(!r.can()){
+      alert("Wait " + Math.ceil(r.left()/1000) + " seconds before trying again.");
+      return;
+    }
+    const pw = prompt("Password:");
+    if(!pw){ alert("Password required."); return; }
+    if(!await o(pw)){ alert("Wrong password."); return; }
+    const t = document.getElementById("e").value.trim();
+    if(!t){ alert("Enter text to decrypt."); return; }
+    try {
+      const p = t.split('|');
+      if(p.length !== 3) throw new Error("Wrong format.");
+      const [s1, s2, s3] = p.map(s => s.split(':')[1]);
+      const s = new Uint8Array(await g(s1));
+      const i = new Uint8Array(await g(s2));
+      const d = await g(s3);
+      const k = await j(pw, s);
+      const dec = await crypto.subtle.decrypt({name:"AES-GCM", iv:i}, k, d);
+      const txt = new TextDecoder().decode(dec);
+      document.getElementById("f").innerText = txt;
+    } catch(e) {
+      document.getElementById("f").innerText = "❌ Decryption error: " + e.message;
+    }
+  };
+
+  window.x = function(){
+    const t = document.getElementById("f").innerText;
+    if(!t){ alert("Nothing to copy."); return; }
+    navigator.clipboard.writeText(t).then(() => alert("Copied!")).catch(() => alert("Copy failed."));
+  };
+
+  window.w = function(){
+    document.getElementById("c").style.display = "none";
+    document.getElementById("a").style.display = "block";
+    document.getElementById("b").style.display = "block";
+  };
+
+  window.q = function(){
+    document.getElementById("c").style.display = "block";
+    document.getElementById("a").style.display = "none";
+    document.getElementById("b").style.display = "none";
+  };
+
+  const A = document.getElementById("a"), B = A.getContext("2d");
+  const C = {x:50, y:150, r:12, g:0.6, l:-10, v:0, mv:12};
+  const D = 60, E = 150;
+  const F = [];
+  const G = document.getElementById("b");
+  let H = 0, I = 0, J = false;
+
+  function K(){
+    C.y = 150;
+    C.v = 0;
+    F.length = 0;
+    H = 0;
+    I = 0;
+    J = false;
+    G.textContent = "Score: 0";
+  }
+
+  function L(){
+    B.fillStyle = "yellow";
+    B.beginPath();
+    B.arc(C.x, C.y, C.r, 0, 2*Math.PI);
+    B.fill();
+
+    B.fillStyle = "black";
+    B.beginPath();
+    B.arc(C.x + 5, C.y - 4, 3, 0, 2*Math.PI);
+    B.fill();
+
+    B.fillStyle = "orange";
+    B.beginPath();
+    let b = C.x + C.r + 10;
+    B.moveTo(b, C.y);
+    B.lineTo(b - 10, C.y - 3);
+    B.lineTo(b - 10, C.y + 3);
+    B.closePath();
+    B.fill();
+  }
+
+  function M(p){
+    B.fillStyle = "#228B22";
+    B.fillRect(p.x, 0, D, p.t);
+    B.fillRect(p.x, p.t + E, D, A.height - p.t - E);
+  }
+
+  function N(){
+    if(J) return;
+    H++;
+    C.v += C.g;
+    if(C.v > C.mv) C.v = C.mv;
+    C.y += C.v;
+
+    if(C.y + C.r > A.height){
+      C.y = A.height - C.r;
+      J = true;
+    }
+    if(C.y - C.r < 0){
+      C.y = C.r;
       C.v = 0;
-      F.length = 0;
-      H = 0;
-      I = 0;
-      J = false;
-      G.textContent = "Score: 0";
     }
-  
-    function L(){
-      B.fillStyle = "yellow";
-      B.beginPath();
-      B.arc(C.x, C.y, C.r, 0, 2*Math.PI);
-      B.fill();
-  
-      B.fillStyle = "black";
-      B.beginPath();
-      B.arc(C.x + 5, C.y - 4, 3, 0, 2*Math.PI);
-      B.fill();
-  
-      B.fillStyle = "orange";
-      B.beginPath();
-      let b = C.x + C.r + 10;
-      B.moveTo(b, C.y);
-      B.lineTo(b - 10, C.y - 3);
-      B.lineTo(b - 10, C.y + 3);
-      B.closePath();
-      B.fill();
+
+    if(H % 90 === 0){
+      let mh = A.height - E - 50;
+      let th = Math.floor(Math.random() * mh) + 25;
+      F.push({x: A.width, t: th, p: false});
     }
-  
-    function M(p){
-      B.fillStyle = "#228B22";
-      B.fillRect(p.x, 0, D, p.t);
-      B.fillRect(p.x, p.t + E, D, A.height - p.t - E);
-    }
-  
-    function N(){
-      if(J) return;
-      H++;
-      C.v += C.g;
-      if(C.v > C.mv) C.v = C.mv;
-      C.y += C.v;
-  
-      if(C.y + C.r > A.height){
-        C.y = A.height - C.r;
-        J = true;
-      }
-      if(C.y - C.r < 0){
-        C.y = C.r;
-        C.v = 0;
-      }
-  
-      if(H % 90 === 0){
-        let mh = A.height - E - 50;
-        let th = Math.floor(Math.random() * mh) + 25;
-        F.push({x: A.width, t: th, p: false});
-      }
-  
-      for(let i = 0; i < F.length; i++){
-        let p = F[i];
-        p.x -= 3;
-  
-        if(C.x + C.r > p.x && C.x - C.r < p.x + D){
-          if(C.y - C.r < p.t || C.y + C.r > p.t + E){
-            J = true;
-          }
-        }
-  
-        if(!p.p && p.x + D < C.x - C.r){
-          p.p = true;
-          I++;
-          G.textContent = "Score: " + I;
+
+    for(let i = 0; i < F.length; i++){
+      let p = F[i];
+      p.x -= 3;
+
+      if(C.x + C.r > p.x && C.x - C.r < p.x + D){
+        if(C.y - C.r < p.t || C.y + C.r > p.t + E){
+          J = true;
         }
       }
-  
-      while(F.length > 0 && F[0].x + D < 0){
-        F.shift();
+
+      if(!p.p && p.x + D < C.x - C.r){
+        p.p = true;
+        I++;
+        G.textContent = "Score: " + I;
       }
     }
-  
-    function O(){
-      B.clearRect(0, 0, A.width, A.height);
-      L();
-      F.forEach(M);
-      if(J){
-        B.fillStyle = "rgba(0,0,0,0.5)";
-        B.fillRect(0, 0, A.width, A.height);
-        B.fillStyle = "white";
-        B.font = "48px Arial";
-        B.textAlign = "center";
-        B.fillText("Game Over", A.width / 2, A.height / 2 - 20);
-        B.font = "24px Arial";
-        B.fillText("Tap to Restart", A.width / 2, A.height / 2 + 20);
-      }
+
+    while(F.length > 0 && F[0].x + D < 0){
+      F.shift();
     }
-  
-    function P(){
-      N();
-      O();
-      requestAnimationFrame(P);
+  }
+
+  function O(){
+    B.clearRect(0, 0, A.width, A.height);
+    L();
+    F.forEach(M);
+    if(J){
+      B.fillStyle = "rgba(0,0,0,0.5)";
+      B.fillRect(0, 0, A.width, A.height);
+      B.fillStyle = "white";
+      B.font = "48px Arial";
+      B.textAlign = "center";
+      B.fillText("Game Over", A.width / 2, A.height / 2 - 20);
+      B.font = "24px Arial";
+      B.fillText("Tap to Restart", A.width / 2, A.height / 2 + 20);
     }
-  
-    function Q(){
-      if(J) K();
-      else C.v = C.l;
-    }
-  
-    A.addEventListener("click", Q);
-    A.addEventListener("touchstart", e => { e.preventDefault(); Q(); }, {passive: false});
-    G.addEventListener("click", () => { window.q(); });
-  
-    K();
-    P();
-  
-  })();
-  </script>
-  </body>
-  </html>
+  }
+
+  function P(){
+    N();
+    O();
+    requestAnimationFrame(P);
+  }
+
+  function Q(){
+    if(J) K();
+    else C.v = C.l;
+  }
+
+  A.addEventListener("click", Q);
+  A.addEventListener("touchstart", e => { e.preventDefault(); Q(); }, {passive: false});
+  G.addEventListener("click", () => { window.q(); });
+
+  K();
+  P();
+
+})();
+</script>
+</body>
+</html>
