--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
     try {
       const p = t.split('|');
       if(p.length !== 3) throw new Error("Wrong format.");
-      const [s1, s2, s3] = p.map(s => s.split(':')[1]);
+      
+      // MODIFIED LINES BELOW: Added .trim() to each part
+      const s1 = p[0].split(':')[1].trim();
+      const s2 = p[1].split(':')[1].trim();
+      const s3 = p[2].split(':')[1].trim();
+
       const s = new Uint8Array(await g(s1));
       const i = new Uint8Array(await g(s2));
       const d = await g(s3);
@@ -282,3 +287,4 @@
 </script>
 </body>
 </html>
+
